--- a/outerspace/random_topic.html
+++ b/outerspace/random_topic.html
@@ -6,6 +6,10 @@
     <title>Tópicos Aleatórios</title>    
 </head>
 <body>
+    <div id="content">
+                  
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./src/random.js"></script>
