--- a/outerspace/random_topic.html
+++ b/outerspace/random_topic.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="noindex">
     <title>Tópicos Aleatórios</title>    
 </head>
-<body>
-    <div id="content">
-                  
-        </div>
-    </div>
+<body>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./src/random.js"></script>
