--- a/outerspace/random_topic/index.html
+++ b/outerspace/random_topic/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <meta name="robots" content="noindex">
     <title>Tópicos Aleatórios</title>    
 </head>
